add todo add and js file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<html> <head>
+<html>
+ <head>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="index.js"></script>
     <title>Todo List Application</title>
 <link rel="stylesheet" href="index.css">
   </head>
