--- a/index.html
+++ b/index.html
@@ -37,4 +37,10 @@
         Have a great workshop 0 pomodoros
       </li>
     </ul>
-  </body> </html>
+  </body> 
+  <div id="new-todo-block">
+      <input class="text-input" id="new-todo-description" type="text" placeholder="Add a new todo...">
+      <input class="text-input" id="new-pomodoro-estimate" type="number" placeholder="Pomodoro estimate...">
+      <input class="button" id="add-new-todo-button" type="submit" value="Add todo">
+    </div>
+</html>
